--- a/css/project3.css
+++ b/css/project3.css
@@ -1,8 +1,59 @@
 body{
 	background-color:rgba(220, 20, 60, 0.4) ;
-	background-size: cover;
 
 }
+
+
+.threeflex{
+	display:flex;
+	height: 45px;
+	width: 45px;
+	border: none;
+	border-radius:20%;
+	background-color: rgba(77, 20, 17, 1.0);
+	margin-left: 875px;
+	margin-top: 20px;
+
+
+}
+#dot1{
+	height:5px;
+	width: 5px;
+	border: 2px solid;
+	border-radius: 50%;
+	background-color: white;
+	margin-top: 18px;
+	border-color: white;
+	margin-left: 7px;
+
+}
+
+#dot2{
+	height:5px;
+	width: 5px;
+	border: 2px solid;
+	border-radius: 50%;
+	background-color: white;
+	margin-top: 18px;
+	border-color: white;
+	margin-left: 2px;
+
+}
+
+#dot3{
+	height:5px;
+	width: 5px;
+	border: 2px solid;
+	border-radius: 50%;
+	background-color: white;
+	margin-top: 18px;
+	border-color: white;
+	margin-left: 2px;
+
+}
+
+
+
 
 
 .fix{
@@ -10,9 +61,9 @@ body{
 	height: 60px;
 	background-color: orange;
 	border: 2px solid;
-	background-color:rgba(220, 20, 60, 0.01) ;
+	background-color:rgba(220, 20, 60, 0.01);
 	border: none;
-}
+	}
 
 
 
